[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Day4Controller.gd" type="Script" id=1]

[node name="Day4Root" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenuButton" type="Button" parent="."]
offset_right = 12.0
offset_bottom = 20.0
text = "Main menu"

[node name="Test1Button" type="Button" parent="."]
offset_top = 30.0
offset_right = 51.0
offset_bottom = 50.0
text = "Test 1"

[node name="Puzzle1Button" type="Button" parent="."]
offset_top = 60.0
offset_right = 66.0
offset_bottom = 80.0
text = "Puzzle 1"

[node name="Test2Button" type="Button" parent="."]
offset_top = 90.0
offset_right = 66.0
offset_bottom = 110.0
text = "Test 2"
align = 0

[node name="Puzzle2Button" type="Button" parent="."]
offset_top = 120.0
offset_right = 66.0
offset_bottom = 140.0
text = "Puzzle 2"
align = 0

[node name="Test1Label" type="Label" parent="."]
offset_left = 100.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 44.0
text = "?"

[node name="Puzzle1Label" type="Label" parent="."]
offset_left = 100.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 74.0
text = "?"

[node name="Test2Label" type="Label" parent="."]
offset_left = 100.0
offset_top = 90.0
offset_right = 200.0
offset_bottom = 104.0
text = "?"

[node name="Puzzle2Label" type="Label" parent="."]
offset_left = 100.0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 134.0
text = "?"

[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Test1Button" to="." method="_on_Test1Button_pressed"]
[connection signal="pressed" from="Puzzle1Button" to="." method="_on_Puzzle1Button_pressed"]
[connection signal="pressed" from="Test2Button" to="." method="_on_Test2Button_pressed"]
[connection signal="pressed" from="Puzzle2Button" to="." method="_on_Puzzle2Button_pressed"]
